--- a/src/components/page/Page.css
+++ b/src/components/page/Page.css
@@ -6,8 +6,13 @@
   min-height: 100%;
 }
 
+.padding-page {
+  height: 128px;
+  min-height: 128px !important;
+}
+
 @media only screen and (min-width: 1000px) {
   .page {
-    width: 50vw;
+    width: 100%;
   }
 }
